--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Pablo Chumba | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Pablo Chumba | WDD 130</h1>
+        <img src="images/profile.webp" alt="Pablo" width="200">
+        <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
+            I'm someone who cares about people, thinks a little too much, and tries to do the right
+            thing (most days).
+            I like learning new stuff, good conversations, and laughing at myself when life gets
+            weird. Big on values,
+            low on drama, taking things one step at a time.
+            Not perfect, still figuring things out, but showing up and moving forward anyway. That’s
+            the plan.</p>
+    </main>
+    <footer>
+        <p>©2026 ❄️ Pablo Chumba ❄️ Rancagua, Chile</p>
+    </footer>
 </body>
+
 </html>
