Styles for my home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Chumba | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -21,10 +22,9 @@
             I'm someone who cares about people, thinks a little too much, and tries to do the right
             thing (most days).
             I like learning new stuff, good conversations, and laughing at myself when life gets
-            weird. Big on values,
-            low on drama, taking things one step at a time.
-            Not perfect, still figuring things out, but showing up and moving forward anyway. That’s
-            the plan.</p>
+            weird. Big on values,< low on drama, taking things one step at a time. Not perfect,
+              still figuring things out, but showing up and moving forward anyway. That’s the
+              plan.</p>
     </main>
     <footer>
         <p>©2026 ❄️ Pablo Chumba ❄️ Rancagua, Chile</p>
