Enhancements on my home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Chumba | WDD 130</title>
+    <meta name="description"
+      content="Home page of Pablo Chumba for the W02 assignment, showing personal information and Rancagua, Chile.">
+    <meta name="author" content="Pablo">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -17,15 +20,42 @@
     </header>
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
-        <img src="images/profile.webp" alt="Pablo" width="200">
-        <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
-            I'm someone who cares about people, thinks a little too much, and tries to do the right
-            thing (most days).
-            I like learning new stuff, good conversations, and laughing at myself when life gets
-            weird. Big on values,< low on drama, taking things one step at a time. Not perfect,
-              still figuring things out, but showing up and moving forward anyway. That’s the
-              plan.</p>
+        <div class="main-content">
+            <img src="images/profile.webp" alt="Pablo" width="200">
+            <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
+                I'm someone who cares about people, thinks a little too much, and tries to do the
+                right
+                thing (most days).
+                I like learning new stuff, good conversations, and laughing at myself when life gets
+                weird. Big on values, hopefully not so big on drama, taking things one step at a
+                time.
+                Not perfect,
+                still figuring things out, but showing up and moving forward anyway.
+                That’s the plan.
+            </p>
+        </div>
     </main>
+    <aside>
+        <h2>Chile</h2>
+        <div class="aside-content">
+            <img src="images/rancagua.webp" alt="Landscape of Rancagua">
+            <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which makes
+                daily life feel
+                simple and familiar. The city is known for its traditional dances, which people
+                often
+                joke about
+                because they are so specific and different that they seem to exist only here. In a
+                funny
+                way, those
+                traditions give Rancagua its own personality. The city is also so quiet and low-key
+                that
+                people like
+                to joke that Rancagua does not even exist. Still, it feels comfortable and real,
+                especially for
+                those who live there and enjoy its relaxed pace.
+            </p>
+        </div>
+    </aside>
     <footer>
         <p>©2026 ❄️ Pablo Chumba ❄️ Rancagua, Chile</p>
     </footer>
