--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
     <aside>
         <h2>Chile</h2>
-        <div class="aside-content">
+        <div class="aside">
             <img src="images/rancagua.webp" alt="Landscape of Rancagua">
             <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which makes
                 daily life feel
