--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pablo Chumba | WDD 130</title>
     <meta name="description"
       content="Home page of Pablo Chumba for the W02 assignment, showing personal information and Rancagua, Chile.">
-    <meta name="author" content="Pablo">
+    <meta name="author" content="Pablo Chumba">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
-        <div class="main-content">
+        <div class="main">
             <img src="images/profile.webp" alt="Pablo" width="200">
             <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
                 I'm someone who cares about people, thinks a little too much, and tries to do the
