--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pablo Chumba | WDD 130</title>
     <meta name="description"
       content="Home page of Pablo Chumba for the W02 assignment, showing personal information and Rancagua, Chile.">
-    <meta name="Pablo" content="Pablo Nicolás Chumba Perez">
+    <meta name="author" content="Pablo Chumba Perez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
