--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Chumba | WDD 130</title>
     <meta name="description"
-      content="Home page. Pablo Chumba for the W02 assignment, showing personal information and Rancagua, Chile.">
+      content="Home page. Pablo Chumba. W02 assignment, showing personal information and Rancagua, Chile.">
     <meta name="author" content="Pablo Chumba">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
