Adjustments to alt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
         <div class="main">
-            <img src="images/profile.webp" alt="Pablo" width="200">
+            <img src="images/profile.webp" alt="Picture of Pablo Chumba" width="200">
             <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
                 I'm someone who cares about people, thinks a little too much, and tries to do the
                 right
@@ -38,7 +38,7 @@
     <aside>
         <h2>Chile</h2>
         <div class="aside">
-            <img src="images/rancagua.webp" alt="Landscape of Rancagua">
+            <img src="images/rancagua.webp" alt="Landscape of Rancagua Chile">
             <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which makes
                 daily life feel
                 simple and familiar. The city is known for its traditional dances, which people
