--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
         <div class="main">
-            <img src="images/profile.webp" alt="Image of Pablo Chumba" width="200">
+            <img src="images/profile.webp" alt="Profile picture Pablo Chumba" width="200">
             <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
                 I'm someone who cares about people, thinks a little too much, and tries to do the
                 right
@@ -34,6 +34,14 @@
                 That’s the plan.
             </p>
         </div>
+        <ul>
+            <a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=eng"
+              target="_blank">Visit San Diego California Temple</a>
+            <a href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple?lang=eng"
+              target="_blank">Visit Santiago de Chile Temple</a>
+            <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng"
+              target="_blank"></a>
+        </ul>
     </main>
     <aside>
         <h2>Chile</h2>
