--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
         <div class="main">
-            <img src="images/profile.webp" alt="Profile picture Pablo Chumba" width="200">
+            <img src="images/profile.webp" alt="Profile picture Pablo Chumba Perez" width="200">
             <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
                 I'm someone who cares about people, thinks a little too much, and tries to do the
                 right
