--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
@@ -39,7 +39,8 @@
         <h2>Chile</h2>
         <div class="aside">
             <img src="images/rancagua.webp" alt="Landscape of Rancagua Chile">
-            <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which makes
+            <p>Rancagua is a very calm city in central Chile. It is not too big or too busy, which
+                makes
                 daily life feel
                 simple and familiar. The city is known for its traditional dances, which people
                 often
