very last final changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>Chile</h2>
         <div class="aside">
             <img src="images/rancagua.webp" alt="Landscape of Rancagua Chile">
-            <p>Rancagua is a very calm city in central Chile. It is not too big or too busy, which
+            <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which
                 makes
                 daily life feel
                 simple and familiar. The city is known for its traditional dances, which people
