W03 Code-along Activity: Home Page Layout

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="#">Linkedin</a>
         </nav>
     </header>
     <main>
         <h1>Pablo Chumba | WDD 130</h1>
         <div class="main">
-            <img src="images/profile.webp" alt="Profile picture Pablo Chumba Perez" width="200">
             <p>I'm Pablo Chumba from Rancagua. I'm 22 years old.
                 I'm someone who cares about people, thinks a little too much, and tries to do the
                 right
@@ -33,11 +33,52 @@
                 still figuring things out, but showing up and moving forward anyway.
                 That’s the plan.
             </p>
+            <img src="images/profile.webp" alt="Profile picture Pablo Chumba Perez" width="200">
+
         </div>
+        <ul class="box">
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple?lang=spa"
+                  target="_blank" rel="noopener noreferrer">
+                    Templo de Santiago, Chile
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/concepcion-chile-temple?lang=spa"
+                  target="_blank" rel="noopener noreferrer">
+                    Templo de Concepción, Chile
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=spa"
+                  target="_blank" rel="noopener noreferrer">
+                    Templo de Lima, Perú
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=spa"
+                  target="_blank" rel="noopener noreferrer">
+                    Templo de Los Olivos, Lima, Perú
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple"
+                  target="_blank" rel="noopener noreferrer">
+                    Salt Lake Temple
+                </a>
+            </li>
+        </ul>
+
+
     </main>
-    <aside>
-        <h2>Chile</h2>
+    <aside class="box">
+
         <div class="aside">
+            <h2>Chile</h2>
             <img src="images/rancagua.webp" alt="Landscape of Rancagua Chile">
             <p>Rancagua is a calm city in central Chile. It is not too big or too busy, which
                 makes
