--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,68 +3,76 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap"
-      rel="stylesheet">
+
+    <title>About Us | Dry Oar Rafting</title>
+    <meta name="description"
+      content="Meet Dry Oar Rafting. Learn our story, our guides, and how we deliver safe, unforgettable whitewater adventures.">
+    <meta name="author" content="Pablo Chumba">
+
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="wwr Logo">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Rafting logo">
         </a>
+
         <nav>
             <a href="index.html">Home</a>
-            <a href="./about.html">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
+
     <main>
         <div class="hero">
-            <img id="hero-img" src="images/hero.webp" alt="People enjoying wwr">
-            <h1 class="hero-title">Drive Oar! Have an Adventure!</h1>
+            <img id="hero-img" src="images/hero.webp" alt="People rafting through river rapids">
+            <h1>Dry Oar Rafting: Have an Adventure!</h1>
+
             <article>
-                <img src="images/rafting59_600.jpg" alt="">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Quisquam eveniet eum quam beatae mollitia non, ipsam perferendis,
-                    odio nam commodi quis maiores eaque nisi saepe optio minus voluptate
-                    quasi ut.</p>
+                <img src="images/rafting59_600.jpg" alt="Rafting team navigating river rapids">
+                <p>
+                    Our goal is to provide you with the best experience possible. We have been
+                    creating unforgettable trips
+                    for over 30 years with expert guides and a safety-first approach.
+                </p>
             </article>
         </div>
+
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est labore nam
-                delectus necessitatibus
-                animi quidem consequuntur eaque non ullam deleniti, totam
-                sit laudantium rem magnam aperiam in reiciendis sint?</p>
+            <p>
+                Dry Oar started rafting the river in 1995. We are a family-owned and operated
+                business committed to
+                providing you with the best experience possible.
+            </p>
         </section>
+
         <section>
             <h2>Adventure Awaits You!</h2>
         </section>
     </main>
+
     <footer>
-        <p>Dry Oar &copy; 2023 - Pablo Chumba</p>
+        <p>Dry Oar &copy; 2026 - Pablo Chumba</p>
         <nav class="socialmedia">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+            <a href="https://facebook.com" target="_blank" rel="noopener">
+                <img src="images/facebook.png" alt="Facebook icon">
             </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/x.png" alt="x icon">
+
+            <a href="https://twitter.com" target="_blank" rel="noopener">
+                <img src="images/x-icon.png" alt="X icon">
             </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+
+            <a href="https://instagram.com" target="_blank" rel="noopener">
+                <img src="images/instagram-icon.png" alt="Instagram icon">
             </a>
         </nav>
-    </footer>
 
+    </footer>
 </body>
 
 </html>
