--- a/wwr/about.html
+++ b/wwr/about.html
@@ -64,7 +64,7 @@
             </a>
 
             <a href="https://twitter.com" target="_blank" rel="noopener">
-                <img src="images/x-icon.png" alt="X icon">
+                <img src="images/x-icon.png" alt="X social media icon">
             </a>
 
             <a href="https://instagram.com" target="_blank" rel="noopener">
